# cumulus-etl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  README.rst  SECURITY.md  bdf.yaml  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  tag-release.sh
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: ci.yaml  docker-hub.yaml  pages.yaml  pypi.yaml
README/conformance/: i2b2.xhtml  supported.bnf  supported.xhtml
conformance/: future.xhtml  i2b2.bnf
conformance/nlp-extension/: nlp-example.json
cumulus/: __init__.py  bsv.py  cli.py  cli_utils.py  codebook.py  common.py  config.py  context.py  ctakes.py  errors.py  etl.py  fhir_client.py  fhir_common.py  fhir_ctakes.py  fhir_template.py  iter_utils.py  labelstudio.py  store.py  store_json_tree.py  store_ndjson.py  store_parquet.py  tasks.py  text2fhir.py
cumulus/chart_review/: __init__.py  cli.py  downloader.py  labelstudio.py  selector.py
cumulus/ctakes/: __init__.py  chart_review.py
cumulus/deid/: __init__.py  codebook.py  ms-config.json  mstool.py  philter.py  scrubber.py
cumulus/deprecated/: __init__.py
cumulus/etl/: __init__.py  cli.py  config.py  tasks.py
cumulus/formats/: __init__.py  athena.py  base.py  batched_files.py  deltalake.py  factory.py  json_tree.py  ndjson.py  parquet.py
cumulus/i2b2/: __init__.py  cohort.py  config.py  etl.py  extract.py  fhir_template.py  schema.py  transform.py
cumulus/loaders/: __init__.py  base.py  fhir_ndjson.py
cumulus/nlp/: __init__.py  extract.py  watcher.py
cumulus_etl/: __init__.py  batching.py  cli.py  cli_utils.py  common.py  errors.py  feedback.py  fhir_client.py  fhir_common.py  http.py  id_handling.py  store.py
cumulus_etl/chart_review/: __init__.py  cli.py  downloader.py  labelstudio.py  selector.py
cumulus_etl/completion/: __init__.py  schema.py
cumulus_etl/deid/: __init__.py  codebook.py  ms-config.json  mstool.py  philter-config.toml  philter.py  scrub-rules.toml  scrubber.py
cumulus_etl/etl/: __init__.py  cli.py  config.py  context.py  init.py  pipeline.py  tasks.py
cumulus_etl/export/: __init__.py  cli.py
cumulus_etl/fhir/: __init__.py  fhir_auth.py  fhir_client.py  fhir_schemas.py  fhir_utils.py
cumulus_etl/formats/: __init__.py  base.py  batch.py  batched_files.py  deltalake.py  factory.py  ndjson.py  nlp.py  parquet.py
cumulus_etl/inliner/: __init__.py  cli.py  inliner.py  reader.py  writer.py
cumulus_etl/loaders/: __init__.py  base.py
cumulus_etl/nlp/: __init__.py  extract.py  huggingface.py  models.py  openai.py  selection.py  task_mixins.py  types.py  utils.py  watcher.py
cumulus_etl/sample/: __init__.py  cli.py
cumulus_etl/upload_notes/: __init__.py  cli.py  downloader.py  labeling.py  labelstudio.py  selector.py
docs/: CONCURRENCY.md  MAINTAINERS.md  README.md  bulk-exports.md  chart-review.md  deid.md  index.md  local-setup.md  manual-review.md  nlp.md  overview.md  performance.md  vendors.md
docs/conformance/: future.bnf
docs/explanations/: deid.md  overview.md
docs/howtos/: cerner-tips.md  cumulus-aws-template.yaml  epic-tips.md  etl-performance.md  first-time-setup.md  manual-review.md  run-cumulus-etl.md  set-up-aws.md
docs/nlp/: example.md  index.md  models.md
docs/setup/: aws.md  cumulus-aws-template.yaml  index.md  initialization.md  sample-runs.md
docs/studies/: covid-symptom.md  index.md
docs/vendors/: cerner.md  epic.md  index.md
etl/: codebook.py  common.py  ctakes.py  deid.py  fhir_template.py  pipeline.py  store.py
etl/common/: fhir_template.py
etl/ctakes/: ctakes_client.py  ctakes_fhir.py  ctakes_json.py
etl/fhirtype/: encounter.py  interpretation.py
etl/i2b2/: __init__.py  config.py  etl.py  extract.py  i2b2_schema.py  load.py  pipeline.py  transform.py
etl_i2b2_ctakes/: codebook.py  ctakes.py  ctakes_client.py  deid.py  etl.py  extract.py  fhir_template.py  i2b2.py  pipeline.py  store.py  tasks.py
etl_i2b2_ctakes/fhirtype/: immunization.py
etl_i2b2_ctakes/i2b2/: extract.py  i2b2_schema.py  transform.py
etl_i2b2_ctakes/loader/: base.py  condition.py  medication.py  patient.py  procedure.py
resources/: codebook_cloud.sql  codebook_local.sql  covid_symptoms.bsv  covid_symptoms_labelstudio.txt  fhir_condition_template.json  fhir_covid_classifier_extension.json  fhir_documentreference_template.json  fhir_observation_template.json  fhir_patient_template.json  synthea.txt  test_physician_note.json  test_physician_note.txt
test/: ctakesmock.py  s3mock.py  test_codebook_db.py  test_codebook_fhir.py  test_config.py  test_etl.py  test_fhir_common.py  test_fhir_template.py  test_i2b2_cohort.py  test_i2b2_config.py  test_i2b2_etl.py  test_i2b2_fhir_template.py  test_i2b2_query.py  test_i2b2_transform.py  test_labelstudio.py  test_labelstudio_agreement.py  test_labelstudio_synthea.py  test_mstool.py  test_nlp_fhir_extension.py  test_scrubber.py  test_sectionizer.py  test_sql_connect.py  test_text2fhir.py  test_text2fhir_observation.py  utils.py
test/data/: codebook0.json  synthea.json
tests/: conftest.py  ctakesmock.py  i2b2_mock_data.py  s3mock.py  test_batching.py  test_bsv.py  test_bulk_export.py  test_chart_cli.py  test_chart_labelstudio.py  test_cli.py  test_codebook.py  test_codebook_db.py  test_codebook_fhir.py  test_common.py  test_config.py  test_context.py  test_ctakes_rest_client.py  test_ctakes_umls_lookup.py  test_deid_codebook.py  test_deid_mstool.py  test_deid_philter.py  test_deid_scrubber.py  test_deltalake.py  test_etl.py  test_etl_cli.py  test_etl_config.py  test_etl_context.py  test_etl_tasks.py  test_fhir_client.py  test_fhir_common.py  test_fhir_template.py  test_http.py  test_i2b2_cohort.py  test_i2b2_config.py  test_i2b2_etl.py  test_i2b2_fhir_template.py  test_i2b2_loader.py  test_i2b2_oracle_connect.py  test_i2b2_oracle_extract.py  test_i2b2_oracle_query.py  (+15 more)
tests/chart_review/: test_chart_cli.py  test_chart_labelstudio.py
tests/convert/: test_convert_cli.py
tests/covid_symptom/: test_covid_gpt.py  test_covid_results.py  (+1 more)
(+585 files in other folders)
