[project]
name = "cumulus-etl"
requires-python = ">= 3.11"
dependencies = [
    # Manually specify aiobotocore with a boto3 extra, to avoid some dependency hell.
    # (fsspec -> s3fs -> aiobotocore -> botocore are all tightly pinned - adding the boto3 here
    # avoids a lot of backtracking on pip's part to old versions for some reason).
    # Search "fsspec aiobotocore boto3" for more details and other frustrated people.
    # (The 2.14.0 lower bound is to help the resolver align with our boto3 requirements quicker.)
    # Once s3fs makes a release that allows aiobotocore 3.0.0, we might be able to remove this line?
    "aiobotocore[boto3] >= 2.14.0, < 3",
    "boto3 >= 1.34.131",
    "ctakesclient >= 5.1",
    "cumulus-fhir-support >= 1.8",
    "delta-spark >= 4, < 5",
    "fsspec[http,s3]",
    "httpx",
    "inscriptis",
    "label-studio-sdk >= 2",
    "nltk >= 3.9",
    "openai",
    "oracledb",
    "philter-lite",
    "pyarrow",
    "pyathena",
    "pydantic",
    "pyspark < 4.1",  # TODO: investigate why 4.1 breaks things
    "rich",
]
authors = [
  { name="Andy McMurry, PhD", email="andrew.mcmurry@childrens.harvard.edu" },
  { name="Michael Terry", email="michael.terry@childrens.harvard.edu" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["description", "version"]

[project.optional-dependencies]
tests = [
    "coverage",
    "ddt",
    "jwcrypto",
    "moto[server,s3] >= 5.0",
    "pytest",
    "pytest-cov",
    "respx",
    "time-machine",
]
dev = [
    "pre-commit",
    # Ruff is using minor versions for breaking changes until their 1.0 release.
    # See https://docs.astral.sh/ruff/versioning/
    "ruff < 0.15",  # keep in rough sync with .pre-commit-config.yaml
]

[project.urls]
"Homepage" = "https://github.com/smart-on-fhir/cumulus-etl"

[project.scripts]
cumulus-etl = "cumulus_etl.cli:main_cli"

[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "tests/",
    "LICENSE",
]
exclude = [
    "**/.pytest_cache",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
allowed-confusables = ["’"]  # allow proper apostrophes
select = [
    "A",  # prevent using keywords that clobber python builtins
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "S",  # bandit security warnings
    "UP",  # alert you when better syntax is available in your python version
]
ignore = [
    # E501 is the line-too-long check.
    # Ruff formatting will generally control the length of Python lines for us.
    # But it leaves comments alone. And since we used to have a longer line length (120),
    # we have a lot of legacy comments over 100 width.
    # Just disable the check for now, rather than manually fixing all 300+ lines.
    # Hopefully we can address them slowly over time.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # init files hold API, so not using imports is intentional
"tests/**" = ["S"]  # tests do suspicious stuff that's fine, actually
